--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -8,6 +8,8 @@ body {
     background-color: #A29AC4;
     margin: 0;
 		padding: 0;
+		font: 12px/1.5 Helvetica, Arial, sans-serif;
+    height: 100%;
 /*
 background-image: url("./images/backgroundSmall.png");
 background-position: 0 0;
