--- a/views/dashboard.mustache
+++ b/views/dashboard.mustache
@@ -14,6 +14,8 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js" type="text/javascript"></script>
 <script src="/js/underscore.js" type="text/javascript"></script>
 <script src="/js/backbone.js" type="text/javascript"></script>
+<script src="/js/capsule.js" type="text/javascript"></script>
+<script src="http://localhost/socket.io/socket.io.js"></script> 
 <script src="/js/logs.js" type="text/javascript"></script>
 <script src="/js/astroObjectLib.js" type="text/javascript"></script>
 <script src="/js/helpers.js" type="text/javascript"></script>
@@ -24,6 +26,7 @@
 <script src="/js/dashboard.js" type="text/javascript"></script>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js" type="text/javascript"></script>
+
 <script type="text/javascript">
 
 var ASCOT = ASCOT || {};
