--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -5,16 +5,12 @@ html {
 
 body {
     min-width: 960px;
-    background-color: #A29AC4;
+    background-color: #b7abc3;
     margin: 0;
 		padding: 0;
 		font: 12px/1.5 Helvetica, Arial, sans-serif;
-    height: 100%;
-/*
-background-image: url("./images/backgroundSmall.png");
-background-position: 0 0;
-background-repeat: repeat;
-*/
+    background-image: url("/dashboards/images/bgImage.png");
+    background-repeat: repeat-x;
 }
 
 ul {
