--- a/views/dashboard.mustache
+++ b/views/dashboard.mustache
@@ -15,7 +15,7 @@
 <script src="/js/underscore.js" type="text/javascript"></script>
 <script src="/js/backbone.js" type="text/javascript"></script>
 <script src="/js/capsule.js" type="text/javascript"></script>
-<script src="http://localhost/socket.io/socket.io.js"></script> 
+<script src="/socket.io/socket.io.js"></script> 
 <script src="/js/logs.js" type="text/javascript"></script>
 <script src="/js/astroObjectLib.js" type="text/javascript"></script>
 <script src="/js/helpers.js" type="text/javascript"></script>
