--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -27,41 +27,96 @@ header {
   z-index: 10;
   background: #b3adc6;
   padding: 10px 10px;
-  -moz-box-shadow: 0px 0px 0px rgba(0, 0, 0, .4), 0 1px 0 rgba(0, 0, 0, .4);
+  -moz-box-shadow: 0px 0px 0px rgba(0, 0, 0, .4), 0 5px 10px rgba(0, 0, 0, .3);
   -webkit-box-shadow: 0px 0px 0px rgba(0, 0, 0, .4), 0px 5px 10px  rgba(0, 0, 0, .3);
 }
 
 .dashboard{
 }
 
-.title {
+#toolBoxHeader{
+  margin: 10px;
+  text-align: left;
+}
+
+#tools{
+}
+
+.toolBoxText {
   font-size: 14px;
-  font-weight: medium;
+  font-weight: bold;
   color: #000000;
   text-shadow: 0 1px 0 rgba(255, 255, 255, .7);
   opacity: .6;
-  margin: 15px;
 }
 
+.titleHover{
+  font-size: 14px;
+  font-weight: bold;
+  color: white;
+  margin-right: 1px;
+}
 
-#chat {
-  position: absolute;
-  display: block;
-  width: 300px;
-  height: 200px;
-  top: 66px;
-  z-index: 500;
-  background: rgba(0, 0, 0, 0.8);
+a.barButton {
+  height: 29px;
+  line-height: 27px;
+  font-size: 15px;
+  color: white;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.8);
+  background: #764293;
+  padding: 0 12px;
+  margin-right: 10px;
+  opacity: .9;
+  text-decoration: none;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  -moz-border-radius: 6px;
+  -webkit-border-radius: 6px;
+  border-radius: 6px;
+  -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.15),0 1px 0 rgba(255, 255, 255, 0.15) inset;
+  -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.15),0 1px 0 rgba(255, 255, 255, 0.15) inset;
+  box-shadow: 0 1px 0 rgba(255, 255, 255, 0.15),0 1px 0 rgba(255, 255, 255, 0.15) inset;
+    cursor: pointer;
+
+}
+
+.tool{
+  width: 100%; 
+  color: rgba(0, 0, 0, .6);;
+  background-color: rgba(147, 142, 174, 0.4);
+  font-weight: light;
+  text-align: left;
+  padding-top: 10px;
+  padding-bottom: 10px;  
+}
+
+.toolTitle{
+  padding-left: 10px;
+}
+
+#messageSendButton{
+  display: none;
 }
 
 #messageField {
-  width: 90%;
-  padding: 0px;
+  width: 85%;
   overflow-x: hide;
-  background: #DBDBDB;
+  background: white;
   height: 27px;
+  margin: 0px;
+  padding: 5px;
+  border-width: 1px;
+  display: inline;
+  -moz-border-radius: 6px;
+   -webkit-border-radius: 6px;
+   border-radius: 6px;
 }
 
+#chatInput{
+  width: 100%;
+  text-align: center;
+}
+
+/*
 #chatList{
   margin: 0px;
   width: 90%;
@@ -70,8 +125,6 @@ header {
   overflow-y: scroll;
 }
 
-#messageSendButton {
-}
 
 #chatTab {
   position: absolute;
@@ -107,23 +160,25 @@ font-size: 13px;
 z-index: 50;
 }
 
+*/
 
-/*
-
-.chat{
-  height: 410px;
-  background-color: #b7abc3 ;
+.toolBox{
+  display: block; 
+  position: fixed; 
+  text-align: center;
+  background-color: #b7abc3;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   -moz-box-shadow: 0 -1px 0 rgba(0, 0, 0, .1), 0 1px 0 rgba(255, 255, 255, .3);
   -webkit-box-shadow: 0 -1px 0 rgba(0, 0, 0, .1), 0 1px 0 rgba(255, 255, 255, .3);
-  float: right;
   border-style: solid;
-  border-color: rgba(0, 0, 0, .4);  
+  border-color: rgba(0, 0, 0, .4);
   border-width: 1px;
+  margin-right: 10px;
+  margin-top: 10px;
+  -moz-box-shadow: inset 0 0 2px rgba(0, 0, 0, .9);
+  -webkit-box-shadow: inset 0 0 2px rgba(0, 0, 0, .9);
 }
-
-*/
 
 header h1 {
  float: left;
@@ -154,13 +209,9 @@ float: left;
 }
 
 header nav a {
-font-size: 16px;
-padding: 4px 10px;
-margin: 0 0 0 5px;
-color: #764293;
-float: left;
-overflow: visible;
--moz-border-radius: 25px;
--webkit-border-radius: 25px;
-border-radius: 25px;
+  font-size: 16px;
+  padding: 4px 10px;
+  margin: 0 0 0 5px;
+  float: left;
+  overflow: visible;
 }
