--- a/public/css/gadgets.css
+++ b/public/css/gadgets.css
@@ -26,9 +26,13 @@ body {
 .gadgetFrame {
   border-radius: 5px;
   padding: 5px;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 1);
   margin-right: 10px;
   margin-top: 10px;
+  border-style: solid;
+  border-color: rgba(0, 0, 0, .4);  
+  border-width: 1px;
+
 }
 
 .extraPadding{
