--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -4,13 +4,13 @@ html {
 }
 
 body {
-    min-width: 960px;
-    background-color: #b7abc3;
-    margin: 0;
-		padding: 0;
-		font: 14px/1 "Helvetica Neue", Arial, sans-serif;
-    background-image: url("/dashboards/images/bgImage.png");
-    background-repeat: repeat-x;
+  min-width: 960px;
+  background-color: #b7abc3;
+  margin: 0;
+	padding: 0;
+	font: 14px/1 "Helvetica Neue", Arial, sans-serif;
+  background-image: url("/dashboards/images/bgImage.png");
+  background-repeat: repeat-x;
 }
 
 ul {
@@ -42,7 +42,7 @@ header {
 #tools{
 }
 
-.toolBoxText {
+.toolBoxText {  
   font-size: 14px;
   font-weight: bold;
   color: #000000;
@@ -63,7 +63,7 @@ a.barButton {
   font-size: 15px;
   color: white;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.8);
-  background: #764293;
+  background: #938EAF;
   padding: 0 12px;
   margin-right: 10px;
   opacity: .9;
@@ -75,8 +75,12 @@ a.barButton {
   -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.15),0 1px 0 rgba(255, 255, 255, 0.15) inset;
   -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.15),0 1px 0 rgba(255, 255, 255, 0.15) inset;
   box-shadow: 0 1px 0 rgba(255, 255, 255, 0.15),0 1px 0 rgba(255, 255, 255, 0.15) inset;
-    cursor: pointer;
+  cursor: pointer;
+}
 
+a.barButton:hover{
+  background: #764293;
+  text-decoration: none;
 }
 
 .tool{
@@ -91,6 +95,13 @@ a.barButton {
 
 .toolTitle{
   padding-left: 10px;
+}
+
+.chatMessage{
+  padding-left: 20px;
+  padding-right: 10px;
+  margin-bottom: 5px;
+  word-wrap: break-word;
 }
 
 #messageSendButton{
@@ -116,16 +127,29 @@ a.barButton {
   text-align: center;
 }
 
-/*
 #chatList{
-  margin: 0px;
-  width: 90%;
-  height: 180px;
-  background-color: #ff0000;
-  overflow-y: scroll;
+  width: 100%;
 }
 
+input{
+  padding: 5px;  
+  font-size: 14px;
+  text-shadow: 0px 1px 0px #fff;  
+  outline: none;  
+  background: -webkit-gradient(linear, left top, left bottombottom, from(#bcbcbe), to(#ffffff));  
+  background: -moz-linear-gradient(top,  #bcbcbe,  #ffffff);  
+  -webkit-border-radius: 3px;  
+  -moz-border-radius: 3px;  
+  border-radius: 3px;  
+  border: 1px solid rgba(0, 0, 0, 0.5);
+}
 
+input:focus {
+    -webkit-box-shadow: 0 0 5px rgba(102, 45, 145, 1); 
+    -moz-box-shadow: 0 0 5px rgba(102, 45, 145, 1); 
+}
+
+/*
 #chatTab {
   position: absolute;
   width: 30px;
