--- a/views/dashboard.mustache
+++ b/views/dashboard.mustache
@@ -15,6 +15,7 @@
 <script src="/js/underscore.js" type="text/javascript"></script>
 <script src="/js/backbone.js" type="text/javascript"></script>
 <script src="/js/capsule.js" type="text/javascript"></script>
+<script src="/js/chat.js" type="text/javascript"></script>
 <script src="/socket.io/socket.io.js"></script> 
 <script src="/js/logs.js" type="text/javascript"></script>
 <script src="/js/astroObjectLib.js" type="text/javascript"></script>
@@ -26,8 +27,6 @@
 <script src="/js/chat.js" type="text/javascript"></script>
 <script src="/js/dashboard.js" type="text/javascript"></script>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js" type="text/javascript"></script>
-
 <script type="text/javascript">
 
 var ASCOT = ASCOT || {};
@@ -37,10 +36,8 @@ var dashboardId = {{id}};
 var remoteService = {{serviceUrl}};
 
 function loadState(state) {
-
   ASCOT.dashboard = new UW.Dashboard($("#" + 'dashboard').get(0));
   ASCOT.dashboard.loadState(remoteService + dashboardId);
-  
 };
 
 function saveDashboard() {
@@ -53,6 +50,7 @@ function initGUI() {
 
   var resizeToolBox = function (){
     $('#toolBox').css({'height':  $(window).height() - 100});
+    $('#chatList').css({'height':  $(window).height() - 220});
     if(!toolBoxOpened){
       $('#toolBoxClickableArea').css({'height':  $(window).height() - 100});
     }
@@ -60,7 +58,6 @@ function initGUI() {
   
   resizeToolBox();
   $(window).resize(resizeToolBox);
-
 
   $("#toolBoxClickableArea").click(function() {
   
@@ -157,10 +154,10 @@ function initGUI() {
             <div id="tools" style="display: none">
               <div id="chat" class="tool">
                 <div class="toolTitle" style="width: 100%">Chat</div>
-                <div id="chatList" style="height: 400px"></div>
+                <div id="chatList" style="height: 400px; margin-top: 10px"></div>
                 <div id="chatInput">
                   <form id="chatMessageForm" method="post" action="#" onsubmit="return false">
-                    <input id="messageField" type="text" name="message">
+                    <input id="messageField" type="text" name="chatMessage">
                     <input id="messageSendButton" type="submit" value="send">
                   </form>
                 </div>
