--- a/public/css/gadgets.css
+++ b/public/css/gadgets.css
@@ -25,14 +25,19 @@ body {
 
 .gadgetFrame {
   border-radius: 5px;
-  padding: 5px;
+  padding: 0px;
   background-color: rgba(255, 255, 255, 1);
   margin-right: 10px;
   margin-top: 10px;
-  border-style: solid;
-  border-color: rgba(0, 0, 0, .4);  
-  border-width: 1px;
+  -webkit-box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2);
+}
 
+.gadgetCanvas {
+  background-color: rgba(255, 255, 255, 1);
+  padding: 5px;
+  border-radius: 4px;
 }
 
 .extraPadding{
