--- a/views/dashboard.mustache
+++ b/views/dashboard.mustache
@@ -17,6 +17,7 @@
 <script src="/js/capsule.js" type="text/javascript"></script>
 <script src="/js/chat.js" type="text/javascript"></script>
 <script src="/socket.io/socket.io.js"></script> 
+<script src="/nowjs/now.js"></script> 
 <script src="/js/logs.js" type="text/javascript"></script>
 <script src="/js/astroObjectLib.js" type="text/javascript"></script>
 <script src="/js/helpers.js" type="text/javascript"></script>
@@ -34,6 +35,16 @@ var ASCOT = ASCOT || {};
 var dashboardId = {{id}};
 
 var remoteService = {{serviceUrl}};
+
+var initDashboard = function(){
+  
+  loadState({{state}}); 
+  initGUI();
+}
+
+$(function(){
+    now.ready(initDashboard);
+});
 
 function loadState(state) {
   ASCOT.dashboard = new UW.Dashboard($("#" + 'dashboard').get(0));
@@ -125,7 +136,7 @@ function initGUI() {
 </script>
 
 </head>
-<body onLoad="loadState({{state}}); initGUI();">
+<body>
   <header>
   <div class="container_12 clearfix">
     <div class="grid_12">
@@ -172,7 +183,6 @@ function initGUI() {
       </td>
     </tr>
   </table>
-  
   
 </body>
 </html>
