--- a/views/dashboard.mustache
+++ b/views/dashboard.mustache
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="/css/gadgets.css">
 <link rel="stylesheet" href="/css/dashboard.css">
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js" type="text/javascript"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.js" type="text/javascript"></script>
 <script src="/js/underscore.js" type="text/javascript"></script>
 <script src="/js/backbone.js" type="text/javascript"></script>
 <script src="/js/capsule.js" type="text/javascript"></script>
@@ -37,17 +37,18 @@ var dashboardId = {{id}};
 var remoteService = {{serviceUrl}};
 
 var initDashboard = function(){
-  loadState({{state}}); 
+  loadState({{state}});  
   initGUI();
 }
 
 $(function(){
-    now.ready(initDashboard);
+    initDashboard();
 });
 
 function loadState(state) {
   ASCOT.dashboard = new UW.Dashboard($("#" + 'dashboard').get(0));
   ASCOT.dashboard.loadState(remoteService + dashboardId);
+  return ASCOT.dashboard;
 };
 
 function saveDashboard() {
