--- a/views/dashboard.mustache
+++ b/views/dashboard.mustache
@@ -15,14 +15,15 @@
 <script src="/js/underscore.js" type="text/javascript"></script>
 <script src="/js/backbone.js" type="text/javascript"></script>
 <script src="/js/capsule.js" type="text/javascript"></script>
+<script src="/js/models.js" type="text/javascript"></script>
 <script src="/js/chat.js" type="text/javascript"></script>
 <script src="/socket.io/socket.io.js"></script> 
 <script src="/nowjs/now.js"></script> 
 <script src="/js/logs.js" type="text/javascript"></script>
-<script src="/js/astroObjectLib.js" type="text/javascript"></script>
 <script src="/js/helpers.js" type="text/javascript"></script>
 <script src="/js/gadget.js" type="text/javascript"></script>
-<script src="/js/layoutManager.js" type="text/javascript"></script> 
+<script src="/js/layoutManager.js" type="text/javascript"></script>
+<script src="/js/astroObjectLib.js" type="text/javascript"></script> 
 <script src="/js/dataset.js" type="text/javascript"></script> 
 <script src="/js/renderer.js" type="text/javascript"></script>
 <script src="/js/chat.js" type="text/javascript"></script>
