--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -9,7 +9,7 @@ body {
   margin: 0;
 	padding: 0;
 	font: 14px/1 "Helvetica Neue", Arial, sans-serif;
-  background-image: url("/dashboards/images/bgImage.png");
+  background-image: url("/images/bgImage.png");
   background-repeat: repeat-x;
 }
 
@@ -210,7 +210,7 @@ header h1 {
 }
 
 header h1 a {
-background: url("/dashboards/images/ascotLogo.png");
+background: url("/images/ascotLogo.png");
 float: left;
 height: 35px;
 overflow: hidden;
