--- a/views/dashboard.mustache
+++ b/views/dashboard.mustache
@@ -12,21 +12,21 @@
 <link rel="stylesheet" href="/css/dashboard.css">
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.js" type="text/javascript"></script>
-<script src="/js/underscore.js" type="text/javascript"></script>
-<script src="/js/backbone.js" type="text/javascript"></script>
-<script src="/js/capsule.js" type="text/javascript"></script>
-<script src="/js/models.js" type="text/javascript"></script>
-<script src="/js/chat.js" type="text/javascript"></script>
+<script src="/underscore.js" type="text/javascript"></script>
+<script src="/backbone.js" type="text/javascript"></script>
+<script src="/capsule.js" type="text/javascript"></script>
+<script src="/models.js" type="text/javascript"></script>
+<script src="/chat.js" type="text/javascript"></script>
 <script src="/socket.io/socket.io.js"></script> 
 <script src="/nowjs/now.js"></script> 
-<script src="/js/logs.js" type="text/javascript"></script>
-<script src="/js/helpers.js" type="text/javascript"></script>
-<script src="/js/gadget.js" type="text/javascript"></script>
-<script src="/js/layoutManager.js" type="text/javascript"></script>
-<script src="/js/astroObjectLib.js" type="text/javascript"></script> 
-<script src="/js/dataset.js" type="text/javascript"></script> 
-<script src="/js/renderer.js" type="text/javascript"></script>
-<script src="/js/dashboard.js" type="text/javascript"></script>
+<script src="/logs.js" type="text/javascript"></script>
+<script src="/helpers.js" type="text/javascript"></script>
+<script src="/gadget.js" type="text/javascript"></script>
+<script src="/layoutManager.js" type="text/javascript"></script>
+<script src="/astroMetaData.js" type="text/javascript"></script> 
+<script src="/dataset.js" type="text/javascript"></script> 
+<script src="/renderer.js" type="text/javascript"></script>
+<script src="/dashboard.js" type="text/javascript"></script>
 
 <script type="text/javascript">
 
