--- a/views/dashboard.mustache
+++ b/views/dashboard.mustache
@@ -16,7 +16,6 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.js" type="text/javascript"></script>
 <script src="/underscore.js" type="text/javascript"></script>
 <script src="/backbone.js" type="text/javascript"></script>
-<script src="/abstractDataModel.js" type="text/javascript"></script>
 <script src="/chat.js" type="text/javascript"></script>
 <script src="/socket.io/socket.io.js"></script> 
 <script src="/nowjs/now.js"></script> 
@@ -24,8 +23,9 @@
 <script src="/util.js" type="text/javascript"></script>
 <script src="/gadget.js" type="text/javascript"></script>
 <script src="/layoutManager.js" type="text/javascript"></script>
-<script src="/astroMetaData.js" type="text/javascript"></script> 
-<script src="/dataSet.js" type="text/javascript"></script> 
+<script src="/abstractDataModel.js" type="text/javascript"></script>
+<script src="/metaDataModel.js" type="text/javascript"></script> 
+<script src="/dataModel.js" type="text/javascript"></script> 
 <script src="/renderer.js" type="text/javascript"></script>
 <script src="/dashboard.js" type="text/javascript"></script>
 
