--- a/static/css/aristo.css
+++ b/static/css/aristo.css
@@ -102,20 +102,19 @@ button {
   -khtml-appearance: none;
   -moz-appearance: none;
   background: none;
-  padding: 4px 9px;
-  font-family: Apex, "Helvetica Neue", "HelveticaNeue", "Lucida Grande", Helvetica, Arial, sans-serif;
+  padding: 9px 9px;
   font-weight: bold;
   font-size: 12px;
-  color: #4F4F4F;
-  text-shadow: 0px 1px 1px #fff;
+  color: #ffffff;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.5);
 
   border-width: 1px;
   border-style: solid;
   border-color: #AFAFAF #9A9A9A #828282 #9A9A9A;
   
   background: #E9E9E9;
-  background: -webkit-gradient(linear, left top, left bottom, from(#E9E9E9), to(#B8B8B7));
-  background: -moz-linear-gradient(top, #E9E9E9, #B8B8B7);
+  background: -webkit-gradient(linear, left top, left bottom, from(#9c81b7), to(#8D6FAC));
+  background: -moz-linear-gradient(top, #9c81b7, #8D6FAC);
   -webkit-box-shadow: inset 0 1px 1px #F5F5F5;
   -moz-box-shadow: inset 0 1px 1px #F5F5F5;
   -webkit-border-radius: 3px;
@@ -134,57 +133,6 @@ button:focus {
   -moz-box-shadow: 0 0 7px rgba(0,0,0,0.4), inset 0 1px 0 rgba(255,255,255,0.5);
 }
 
-button.default, button.blue {
-  border-color: #7EA1B7 #5D7C8F #4C6B7E #5D7C8F;
-  color: #1C4257;
-  background: #B2D9F0;
-  background: -webkit-gradient(linear, left top, left bottom, from(#B2D9F0), to(#78A1BC));
-  background: -moz-linear-gradient(top, #B2D9F0, #78A1BC);
-  -webkit-box-shadow: inset 0 1px 1px #D9EDF9;
-  -moz-box-shadow: inset 0 1px 1px #D9EDF9;
-}
-button.default:hover, button.blue:hover,
-button.default:focus, button.blue:focus {
-  box-shadow: 0 0 7px #53a6d5, inset 0 1px 0 rgba(255,255,255,0.5);
-  -webkit-box-shadow: 0 0 7px #53a6d5, inset 0 1px 0 rgba(255,255,255,0.5);
-  -moz-box-shadow: 0 0 7px #53a6d5, inset 0 1px 0 rgba(255,255,255,0.5);
-  -o-box-shadow: 0 0 7px #53a6d5, inset 0 1px 0 rgba(255,255,255,0.5);
-}
-
-button.red {
-  color: #4F0F0E;
-  background: #E56856;
-  background: -webkit-gradient(linear, left top, left bottom, from(#EE8679), to(#B94543));
-  background: -moz-linear-gradient(top, #EE8679, #B94543);
-  -webkit-box-shadow: inset 0 1px 1px #F4C3BD;
-  -moz-box-shadow: inset 0 1px 1px #F4C3BD;
-  text-shadow: 0 1px 1px #FA9287;
-  border-color: #A2403E;
-}
-button.red:hover, button.red:focus {
-  box-shadow: 0 0 7px #B94543, inset 0 1px 0 rgba(255,255,255,0.5);
-  -webkit-box-shadow: 0 0 7px #B94543, inset 0 1px 0 rgba(255,255,255,0.5);
-  -moz-box-shadow: 0 0 7px #B94543, inset 0 1px 0 rgba(255,255,255,0.5);
-  -o-box-shadow: 0 0 7px #B94543, inset 0 1px 0 rgba(255,255,255,0.5);
-}
-
-button.green {
-  color: #374C29;
-  background: #A9CD7E;
-  background: -webkit-gradient(linear, left top, left bottom, from(#A9CD7E), to(#81A558));
-  background: -moz-linear-gradient(top, #A9CD7E, #81A558);
-  border-color: #92BA63 #8AB05E #81A558 #8AB05E;
-  -webkit-box-shadow: inset 0 1px 1px #CDE2B2;
-  -moz-box-shadow: inset 0 1px 1px #CDE2B2;
-  text-shadow: 0 1px 1px #C9DBB4;
-}
-button.green:hover, button.green:focus {
-  box-shadow: 0 0 7px #81A558, inset 0 1px 0 rgba(255,255,255,0.5);
-  -webkit-box-shadow: 0 0 7px #81A558, inset 0 1px 0 rgba(255,255,255,0.5);
-  -moz-box-shadow: 0 0 7px #81A558, inset 0 1px 0 rgba(255,255,255,0.5);
-  -o-box-shadow: 0 0 7px #81A558, inset 0 1px 0 rgba(255,255,255,0.5);
-}
-
 button:active:not(:disabled) {
   border-color: #B6B6B6 #989898 #AEAEAE #989898;
   background: #B6B6B6;
@@ -194,33 +142,6 @@ button:active:not(:disabled) {
   -moz-box-shadow: inset 0 -1px 1px #F4F4F4;
 }
 
-button.default:active:not(:disabled), button.blue:active:not(:disabled) {
-  border-color: #4A697C #618296 #7B9FB5 #618296;
-  background: #76A0B9;
-  background: -webkit-gradient(linear, left top, left bottom, from(#76A0B9), to(#B0D7EF));
-  background: -moz-linear-gradient(top, #76A0B9, #B0D7EF);
-  -webkit-box-shadow: inset 0 -1px 1px #D8EDF8;
-  -moz-box-shadow: inset 0 -1px 1px #D8EDF8;
-}
-
-button.red:active:not(:disabled) {
-  border-color: #A2403E;
-  background: #B94543;
-  background: -webkit-gradient(linear, left top, left bottom, from(#B94543), to(#EE8679));
-  background: -moz-linear-gradient(top, #B94543, #EE8679);
-  -webkit-box-shadow: inset 0 -1px 1px #F4C3BD;
-  -moz-box-shadow: inset 0 -1px 1px #F4C3BD;
-}
-
-button.green:active:not(:disabled) {
-  color: #374C29;
-  background: #81A558;
-  background: -webkit-gradient(linear, left top, left bottom, from(#81A558), to(#A9CD7E));
-  background: -moz-linear-gradient(top, #81A558, #A9CD7E);
-  border-color: #92BA63 #8AB05E #81A558 #8AB05E;
-  -webkit-box-shadow: inset 0px -1px 1px #CDE2B2;
-  -moz-box-shadow: inset 0px -1px 1px #CDE2B2;
-}
 
 button:disabled, button:hover:disabled {
   opacity: 0.5;
