--- a/static/css/widgets.css
+++ b/static/css/widgets.css
@@ -86,8 +86,6 @@ button {
   -khtml-appearance: none;
   -moz-appearance: none;
 
-  font-weight: normal;
-  font: 15px "Helvetica Neue", Arial, sans-serif;
   color: #ffffff;
   text-shadow: 0 -1px 0 #767577;
   
@@ -107,6 +105,10 @@ button {
   -o-user-select: none;
   user-select: none;
   
+  -moz-box-shadow: 1px 2px 2px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 1px 2px 2px rgba(0,0,0,0.1);
+  box-shadow: 1px 2px 2px rgba(0,0,0,0.1);
+  
   /* transition: all .2s ease-in-out;
   -webkit-transition: all .2s ease-in-out;
   -moz-transition: all .2s ease-in-out;
@@ -122,18 +124,14 @@ button.big {
 
 button:hover,
 button:focus {
-  box-shadow: 0 0 5px rgba(0,0,0,0.3), inset 0 1px 0 rgba(255,255,255,0.3);
-  -webkit-box-shadow: 0 0 5px rgba(0,0,0,0.3), inset 0 1px 0 rgba(255,255,255,0.3);
-  -moz-box-shadow: 0 0 5px rgba(0,0,0,0.3), inset 0 1px 0 rgba(255,255,255,0.3);
   background: #b4aed0;
 }
 
 button:active:not(:disabled) {
-  background: #B6B6B6;
-  background: -webkit-gradient(linear, left top, left bottom, from(#b3adc6), to(#cdcad7));
-  background: -moz-linear-gradient(top, #b3adc6, #cdcad7);
-  -webkit-box-shadow: inset 0 -1px 1px #F4F4F4;
-  -moz-box-shadow: inset 0 -1px 1px #F4F4F4;
+  background: #b4aed0;
+  -moz-box-shadow: inset 1px 1px 1px rgba(0,0,0,0.3);
+  -webkit-box-shadow: inset 1px 1px 1px rgba(0,0,0,0.3);
+  -box-shadow: inset 1px 1px 1px rgba(0,0,0,0.3);
 }
 
 
