--- a/static/css/widgets.css
+++ b/static/css/widgets.css
@@ -122,6 +122,19 @@ button.big {
   padding: 12px 12px;
 }
 
+button.circle{
+  width:100px;
+  height:100px;
+  
+  border-radius:50px;
+  -moz-border-radius:50px;
+  -webkit-border-radius:50px;
+  
+  line-height:100px;
+  text-align:center
+}
+
+
 button:hover,
 button:focus {
   background: #b4aed0;
