--- a/doc/main.css
+++ b/doc/main.css
@@ -124,7 +124,7 @@ a:active, a:hover {
 h1, h2, h3, h4, h5, h6 {
   margin: 0px 0px 20px 0px;
   font-size: 24px;
-  text-shadow: 1px 2px 0 #c0b9ce;
+  text-shadow: 1px 2px 0 #e1dee8;
 }
 code, pre, tt {
   font-family: Monaco, Consolas, "Lucida Console", monospace;
