Changing path images ascot button

--- a/resources/css/ascotButton.css
+++ b/resources/css/ascotButton.css
@@ -1,5 +1,5 @@
 button.ascot {
-  background: url(../images/ascotButton/ascotButton.png);  
+  background: url(http://ascot.astro.washington.edu/images/ascotButton/ascotButton.png);  
   width: 60px;
   height: 23px;
   margin: 0px 2px 0px 2px;
