Removing logging messages

--- a/resources/css/ascotButton.css
+++ b/resources/css/ascotButton.css
@@ -1,5 +1,5 @@
 button.ascot {
-  background: url(http://ascot.astro.washington.edu/images/ascotButton/ascotButton.png);  
+  background: url(../images/ascotButton/ascotButton.png);  
   width: 60px;
   height: 23px;
   margin: 0px 2px 0px 2px;
@@ -13,5 +13,15 @@ button:hover{
   background-position: 60px 0px;
 }
 
+.clickedButtonState{
+  padding-top: 3px;
+  background: white;
+  margin-left: 1px;
+  height: 18px;
+  width: 33px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+}
 
 
