Dashboards allow to have to decoupled scatter plots

--- a/templates/dashboard.mustache
+++ b/templates/dashboard.mustache
@@ -127,7 +127,7 @@ function initGUI() {
   <div class="container_12 clearfix">
     <div class="grid_12">
       <h1>
-        <a href="/dashboard/" title="Astronomical Collaborative Toolkit">Astronomical Collaborative Toolkit</a>
+        <a href="/" title="Astronomical Collaborative Toolkit">Astronomical Collaborative Toolkit</a>
       </h1>
       <nav>
         <ul>
