Changing background color doc

--- a/templates/dashboard.mustache
+++ b/templates/dashboard.mustache
@@ -121,6 +121,13 @@ function initGUI() {
 }
 
 </script>
+
+<style type="text/css">
+  body{
+  	background-color: #a39ac6;
+  }
+</style>
+
 </head>
 <body>
   <header>
