--- a/static/doc/css/main.css
+++ b/static/doc/css/main.css
@@ -68,10 +68,11 @@ header {
 .navigation ul li a{
   text-decoration: none;
   font-size: 16px;
-  font-weight: 500; 
+  font-weight: 200; 
   background: none;
   color: #662d91;
   padding: 5px;
+  border-radius: 5px;
 }
 
 .navigation ul li a.disabledLink{
@@ -81,12 +82,12 @@ header {
 }
 
 .navigation ul li a.selected{
-  background: #c0b9ce;
+  background: transparent;
+  color: rgba(255,255,255,0.8);
   text-shadow: none;
   pointer-events: none;
   cursor: default;
-  border-bottom: 1px solid #662d91;
-  border-top: 1px solid #662d91;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.4);
 }
 
 .navigation ul li a:hover{
@@ -96,12 +97,13 @@ header {
 
 #content{
   padding-left: 40px;
-  border-top: 1px solid #662d91;
-  border-bottom: 1px solid #662d91;
+  border: 2px solid rgba(255,255,255,0.1);
   padding-top: 40px;
   padding-right: 10px;
   padding-bottom: 40px;
+  border-radius: 5px;
   background-color: rgba(255,255,255,0.2);
+  shadow: 1px 1px 6px rgba(0, 0, 0, 0.5);
 }
 
 .uwLogo{
@@ -155,7 +157,8 @@ a:active, a:hover {
   text-shadow: none;
 }
 h1, h2, h3, h4, h5, h6 {
-  margin: 0px 0px 20px 0px;
+  width: 700px;
+  margin: 0px 0px 10px 0px;
   font-size: 18px;
   font-weight: bold;
   text-shadow: 0 1px 0 #c0b9ce;
