--- a/templates/dashboard.mustache
+++ b/templates/dashboard.mustache
@@ -23,9 +23,8 @@
 <script src="/util.js" type="text/javascript"></script>
 <script src="/gadget.js" type="text/javascript"></script>
 <script src="/layoutManager.js" type="text/javascript"></script>
-<script src="/abstractDataModel.js" type="text/javascript"></script>
-<script src="/metaDataModel.js" type="text/javascript"></script> 
-<script src="/dataModel.js" type="text/javascript"></script> 
+<script src="/dataSetModifier.js" type="text/javascript"></script> 
+<script src="/dataSet.js" type="text/javascript"></script> 
 <script src="/renderer.js" type="text/javascript"></script>
 <script src="/dashboard.js" type="text/javascript"></script>
 
