--- a/public/css/gadget.css
+++ b/public/css/gadget.css
@@ -7,17 +7,20 @@ body {
 
 .gadgetFrame {
   border-radius: 5px;
-  padding: 0px;
-  background-color: rgba(255, 255, 255, 1);
-  margin-right: 10px;
+  padding: 5px;  
+  margin-right: 15px;
   margin-top: 10px;
-  -webkit-box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2);
-  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2);
+  margin-bottom: 15px;  
+
+  background-color: white;  
+  border: 1px solid rgba(0, 0, 0, .3);
+  -webkit-box-shadow: rgba(0, 0, 0, .3) 0px 0px 2px;
+  -moz-box-shadow: rgba(0, 0, 0, .3) 0px 0px 2px;
+  box-shadow: rgba(0, 0, 0, .3) 0px 0px 2px;
 }
 
 .gadgetCanvas {
-  background-color: rgba(255, 255, 255, 1);
+  background-color: white;
   padding: 8px;
   border-radius: 4px;
 }
