--- a/templates/dashboardPanel.mustache
+++ b/templates/dashboardPanel.mustache
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="/css/reset.css"> 
+    <link rel="stylesheet" href="/css/text.css"> 
+    <link rel="stylesheet" href="/css/gadget.css">
     <link rel="stylesheet" href="/css/dashboardPanel.css"> 
     
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.js" type="text/javascript"></script>
@@ -72,11 +74,15 @@
         <td style="width: 200px">
         </td>
         <td>
-          <div class="dashboard"></div>
+          <div id="dashboard" class="dashboard"></div>
         </td>
       </tr>
       <tr>
-        <td colspan="2" class="footer"><footer></footer></td> 
+        <td colspan="2" class="footer">
+          <footer>
+            <a href="http://uw.edu" style="float: right"><span class="uwLogo"></span> University of Washington</a>
+          </footer>
+        </td> 
       </tr>
     </table>
   </body>
